# libiio

./: CMakeLists.txt  host_zephyr_backend.c  host_zephyr_backend.h  host_zephyr_backend_test  host_zephyr_backend_test.c  iiod-client.c  iiod-responder.c  lock-dummy.c  lock-windows.c  network.c  network.h
build_x86_64/: .version  artifact_manifest.txt  cmake_uninstall.cmake  iio-config.h
build_x86_64/utils/: iio_attr  iio_event  iio_genxml  iio_info  iio_reg  iio_rwdev
hal_adi_extern/: CMakeLists.txt
hal_adi_extern/adc_demo/: CMakeLists.txt  adc_demo.c  adc_demo.d  iio_adc_demo.c  iio_adc_demo.d
hal_adi_extern/common/: common_data.c  common_data.d  common_data.h
hal_adi_extern/dac_demo/: CMakeLists.txt  dac_demo.c  dac_demo.d  iio_dac_demo.c  iio_dac_demo.d
hal_adi_extern/drivers_platform/maxim/max32670/: maxim_uart.c  maxim_uart.h
hal_adi_extern/drivers_platform/maxim/max32690/: maxim_delay.d  maxim_irq.d  maxim_timer.d  maxim_uart.d  maxim_uart_stdio.d
hal_adi_extern/iio/: CMakeLists.txt  iio.c  iio.d  iio_trigger.c  iio_types.h  iiod.c  iiod.d  iiod_private.h
hal_adi_extern/iio/iio_app/: iio_app.c  iio_app.d  iio_app.h
hal_adi_extern/no-OS/: CMakeLists.txt
hal_adi_extern/no-OS/util/: no_os_alloc.d  no_os_circular_buffer.d  no_os_fifo.d  no_os_lf256fifo.d  no_os_list.d  no_os_mutex.d  no_os_util.c  no_os_util.d
hal_adi_extern/no-OS/zephyr/: zephyr_circular_buffer.c  zephyr_circular_buffer.h  zephyr_uart.c  zephyr_uart.h  zephyr_uart_no_os.c  zephyr_uart_no_os.h
hal_adi_extern/platform/maxim/: main.d  maxim_delay.c  maxim_irq.h  parameters.d  parameters.h
hal_adi_extern/zephyr_specific/include/: no_os_uart.h  zephyr_alloc.h  zephyr_circular_buffer.h  zephyr_mutex.h  zephyr_util.h
hal_adi_extern/zephyr_specific/source/: zephyr_alloc.c  zephyr_circular_buffer.c  zephyr_mutex.c  zephyr_uart.c  zephyr_uart_no_os.c  zephyr_util.c
iiod/: iiod.c  interpreter.c  network.c  ops.h  responder.c
tinyiiod/: CMakeLists.txt  tinyiiod.c  tinyiiod.h  zephiio.c
zephyr/: backend.c  module.yml
zephyr/drivers/adc/: adc_emul_generator.c
zephyr/drivers/iio_device/: CMakeLists.txt  Kconfig  adc.c  thermocouple.c
zephyr/iiod/: network.c  uart.c
zephyr/samples/iiod/: CMakeLists.txt  README.rst  ad_apardpfw_sl.conf  adc-emul.overlay  apard32690_max32690_m4.conf  apard32690_max32690_m4.overlay  eval_ad4052_ardz.overlay  prj.conf  sample.yaml
zephyr/snippets/iiod-console/: README.rst
zephyr/snippets/iiod-network/: iiod-network.conf
(+5 files in other folders)
